--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.97.0",
+    "@react-three/fiber": "^8.13.5",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.292.0",
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.292.0"
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
@@ -21,4 +25,4 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
   }
-} 
+}
